fixed mobile nav menu alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2535,7 +2535,7 @@ kbd {
 }
 @media (max-width: 575px) {
   .nav-mobile-only {
-    display: block;
+    display: flex;
   }
   
 }
